--- a/integrationserver.yaml
+++ b/integrationserver.yaml
@@ -6,12 +6,12 @@ spec:
   designerFlowsOperationMode: disabled
   license:
     accept: true
-    license: L-AMYG-BQ2E4U
-    use: CloudPakForIntegrationProduction
+    license: L-APEH-BSVCHU
+    use: CloudPakForIntegrationNonProduction
   pod:
     containers:
       runtime:
-        image: "us.icr.io/cp4i-gse-poc/sample-ace-project:6670498e46fa1a0b9536aa97317ef21324f301aa"
+        image: "us.icr.io/cp4i-gse-poc/sample-ace-project:4098a711871b8e891255cd6e266e4def6d854be9"
     imagePullSecrets:
       - name: ibm-cr-pull-secret
   replicas: 1
@@ -20,5 +20,4 @@ spec:
   service:
     endpointType: http
   useCommonServices: true
-  version: 11.0.0
-  configurations: ["odbc-conf"]
+  version: 11.0.0.11-r1
